# ubtnarc_collavoid

./: CMakeLists.txt  README.md  package.xml
docker/: Dockerfile  Dockerfile.xavier_deps  launch-docker.sh
include/ubtech/nardc/navigation/: CollChecker.hpp  collision_checker.hpp
launch/: ubtnarc_collavoid.launch
msg/: collavoid.msg
src/: collision_avoidance.cpp
