<?xml version="1.0"?>
<package format="2">
  <name>ubtnarc_collavoid</name>
  <version>0.1.0</version>
  <description>
    Check whether or not it is safe to continue normal robot operation
  </description>
  <license>BSD</license>
  <author email="joe.dinius@ubtrobot.com">Joe</author>
  <author>Joe Dinius</author>
  <author email="dejun.guo@ubtrobot.com">Dejun</author>
  <author>Dejun Guo</author>
  <maintainer email="dejun.guo@ubtrobot.com">Dejun</maintainer>
  <url type="repository">https://github.com/ubtech-nardc/ubtnarc_collavoid</url>
  <url type="bugtracker">https://github.com/ubtech-nardc/ubtnarc_collavoid/issues</url>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
</package>
